@@ -1,10 +1,12 @@
 # Generated by roxygen2: do not edit by hand
 
+export(addMGnify)
 export(doQuery)
 export(getData)
 export(getMetaboLights)
 export(getMetaboLightsFile)
 export(getResult)
+exportMethods(addMGnify)
 import(MultiAssayExperiment)
 import(TreeSummarizedExperiment)
 importFrom(S4Vectors,SimpleList)
